make sure link wraps

--- a/src/wmcads/components/page-contents/_page-contents.scss
+++ b/src/wmcads/components/page-contents/_page-contents.scss
@@ -24,8 +24,7 @@
   a {
     display: block;
     margin-bottom: 10px;
-    overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    white-space: wrap;
   }
 }
